force-app/main/default/objects/Order/fields/affiliateId__c.field-meta.xml
<CustomField>
    <fullName>affiliateId__c</fullName>
    <label>Afiliado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>