force-app/main/default/objects/Order/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Marca (Loja) da Pedido</description>
    <label>Marca</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>BrandOrder</relationshipName>
    <type>Lookup</type>
</CustomField>