force-app/main/default/objects/Order/fields/CanalVenda__c.field-meta.xml
<CustomField>
    <fullName>CanalVenda__c</fullName>
    <label>Canal de Venda</label>
    <length>50</length>
    <type>Text</type>
</CustomField>