force-app/main/default/objects/Order/fields/CanceladoPor__c.field-meta.xml
<CustomField>
    <fullName>CanceladoPor__c</fullName>
    <label>Cancelado Por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>