force-app/main/default/objects/Order/fields/CentrodeDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CentrodeDistribuicao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Centro de Distribuição</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Centro_de_Distribuicao__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>CDPedidos</relationshipName>
    <type>Lookup</type>
</CustomField>