force-app/main/default/objects/Order/fields/ChaveEletronica__c.field-meta.xml
<CustomField>
    <fullName>ChaveEletronica__c</fullName>
    <label>Chave Eletrônica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>