force-app/main/default/objects/Order/fields/creationDate__c.field-meta.xml
<CustomField>
    <fullName>creationDate__c</fullName>
    <description>Data de Criação do Pedido iHub.</description>
    <label>Data de Criação Pedido iHub</label>
    <type>DateTime</type>
</CustomField>