force-app/main/default/objects/Order/fields/Data_Aprovacao__c.field-meta.xml
<CustomField>
    <fullName>Data_Aprovacao__c</fullName>
    <label>Data de Aprovação</label>
    <type>DateTime</type>
</CustomField>