force-app/main/default/objects/Order/fields/DataCancelamento__c.field-meta.xml
<CustomField>
    <fullName>DataCancelamento__c</fullName>
    <label>Data do Cancelamento</label>
    <type>DateTime</type>
</CustomField>