force-app/main/default/objects/Order/fields/DataEmissao__c.field-meta.xml
<CustomField>
    <fullName>DataEmissao__c</fullName>
    <label>Data de Emissão</label>
    <type>DateTime</type>
</CustomField>