force-app/main/default/objects/Order/fields/DataOcorrencia__c.field-meta.xml
<CustomField>
    <fullName>DataOcorrencia__c</fullName>
    <label>Data de Ocorrência</label>
    <type>DateTime</type>
</CustomField>