force-app/main/default/objects/Order/fields/Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discounts__c</fullName>
    <description>Valor do desconto do pedido.</description>
    <inlineHelpText>Informar o valor de desconto do pedido.</inlineHelpText>
    <label>Valor do desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>