force-app/main/default/objects/Order/fields/DiscountSUM__c.field-meta.xml
<CustomField>
    <fullName>DiscountSUM__c</fullName>
    <label>Valor do Desconto</label>
    <summarizedField>OrderItem.Discount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>