force-app/main/default/objects/Order/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>