force-app/main/default/objects/Order/fields/Grupo__c.field-meta.xml
<CustomField>
    <fullName>Grupo__c</fullName>
    <description>Campo de forma de pagamento que é populado através de integração do Objeto de Payments__c, campo Grupo__c.</description>
    <label>Forma de Pagamento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>bankInvoice</fullName>
                <label>Boleto Bancário</label>
            </value>
            <value>
                <fullName>creditCard</fullName>
                <label>Cartão de Crédito</label>
            </value>
            <value>
                <fullName>external</fullName>
                <label>Parceiro</label>
            </value>
            <value>
                <fullName>giftCard</fullName>
                <label>Cartão Presente</label>
            </value>
            <value>
                <fullName>debitCard</fullName>
                <label>Cartão de Débito</label>
            </value>
            <value>
                <fullName>payPal</fullName>
                <label>PayPal</label>
            </value>
            <value>
                <fullName>promissory</fullName>
                <label>Boleto Faturado</label>
            </value>
            <value>
                <fullName>creditControl</fullName>
            </value>
            <value>
                <fullName>exchange</fullName>
                <label>Troca</label>
            </value>
            <value>
                <fullName>return</fullName>
                <label>Devolução</label>
            </value>
            <value>
                <fullName>instantPayment</fullName>
                <label>PIX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>