force-app/main/default/objects/Order/fields/iHubOrderId__c.field-meta.xml
<CustomField>
    <fullName>iHubOrderId__c</fullName>
    <label>iHub Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>