force-app/main/default/objects/Order/fields/IntegrationOrder__c.field-meta.xml
<CustomField>
    <fullName>IntegrationOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedido Integração</label>
    <type>Checkbox</type>
</CustomField>