force-app/main/default/objects/Order/fields/internalOrderId__c.field-meta.xml
<CustomField>
    <fullName>internalOrderId__c</fullName>
    <description>Campo utilizado como id unico para o iHub</description>
    <externalId>true</externalId>
    <label>internalOrderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>