force-app/main/default/objects/Order/fields/NomeEntregadora__c.field-meta.xml
<CustomField>
    <fullName>NomeEntregadora__c</fullName>
    <label>Nome da Entregadora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>