force-app/main/default/objects/Order/fields/NomeMarca__c.field-meta.xml
<CustomField>
    <fullName>NomeMarca__c</fullName>
    <description>Nome da Marca relacionada com o Pedido.</description>
    <formula>Brand__r.Name</formula>
    <label>Nome da Marca</label>
    <type>Text</type>
</CustomField>