force-app/main/default/objects/Order/fields/NumeroFatura__c.field-meta.xml
<CustomField>
    <fullName>NumeroFatura__c</fullName>
    <label>Número da Fatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>