force-app/main/default/objects/Order/fields/NumeroPedidoCliente__c.field-meta.xml
<CustomField>
    <fullName>NumeroPedidoCliente__c</fullName>
    <label>Número Pedido Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>