force-app/main/default/objects/Order/fields/NumeroPedidoERP__c.field-meta.xml
<CustomField>
    <fullName>NumeroPedidoERP__c</fullName>
    <label>Número Pedido ERP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>