force-app/main/default/objects/Order/fields/NumeroRastreio__c.field-meta.xml
<CustomField>
    <fullName>NumeroRastreio__c</fullName>
    <label>Número de Rastreio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>