force-app/main/default/objects/Order/fields/NumeroSerieFatura__c.field-meta.xml
<CustomField>
    <fullName>NumeroSerieFatura__c</fullName>
    <label>Número de Série da Fatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>