force-app/main/default/objects/Order/fields/OkForSending__c.field-meta.xml
<CustomField>
    <fullName>OkForSending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Verifica se o pedido está OK (campos obrigatórios preenchidos) para o envio para Integração Pedido OUT</description>
    <label>Pronto Para Envio ?</label>
    <type>Checkbox</type>
</CustomField>