force-app/main/default/objects/Order/fields/OrderTotals__c.field-meta.xml
<CustomField>
    <fullName>OrderTotals__c</fullName>
    <description>Valor total do pedido incluindo Valor Produtos, Frete, Imposto.</description>
    <formula>TotalAmount +  Shipping__c +  Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor total do pedido incluso o valor dos Produtos, Frete e Taxa.</inlineHelpText>
    <label>Valor Total do Pedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>