force-app/main/default/objects/Order/fields/OriginalOrderId__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido Original ERP</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pedidos Filhos</relationshipLabel>
    <relationshipName>PedidoPai</relationshipName>
    <type>Lookup</type>
</CustomField>