force-app/main/default/objects/Order/fields/OriginOrderId__c.field-meta.xml
<CustomField>
    <fullName>OriginOrderId__c</fullName>
    <description>Id do Pedido iHub na integração do Pedido.</description>
    <externalId>true</externalId>
    <label>Id do Pedido iHub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>