force-app/main/default/objects/Order/fields/RazaoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>RazaoCancelamento__c</fullName>
    <label>Razão de Cancelamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>