force-app/main/default/objects/Order/fields/Sended__c.field-meta.xml
<CustomField>
    <fullName>Sended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o pedido já foi enviado para integração Pedido OUT</description>
    <label>Enviado para Integração?</label>
    <type>Checkbox</type>
</CustomField>