force-app/main/default/objects/Order/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <description>Valor do Frete do Pedido</description>
    <inlineHelpText>Informar o valor do Frete do Pedido.</inlineHelpText>
    <label>Valor do frete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>