force-app/main/default/objects/Order/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <description>Valor do taxa na integração do pedido iHub.</description>
    <label>Valor da taxa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>