force-app/main/default/objects/Order/fields/TipoMarca__c.field-meta.xml
<CustomField>
    <fullName>TipoMarca__c</fullName>
    <formula>TEXT( Brand__r.Type__c )</formula>
    <label>Tipo de Marca</label>
    <type>Text</type>
</CustomField>