force-app/main/default/objects/Order/fields/TotalItems__c.field-meta.xml
<CustomField>
    <fullName>TotalItems__c</fullName>
    <description>Valor de soma do campo Preco__c do itens do pedido.</description>
    <label>Valor Bruto dos Produtos</label>
    <summarizedField>OrderItem.Preco__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>