force-app/main/default/objects/Order/fields/URLRastreio__c.field-meta.xml
<CustomField>
    <fullName>URLRastreio__c</fullName>
    <label>URL de Rastreio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>