force-app/main/default/objects/Order/validationRules/ValidaPedidoIntegracao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaPedidoIntegracao</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
				AND(IntegrationOrder__c = true,
								$User.Id &lt;&gt; &apos;0051k000006LK4K&apos;),
				true, 
				false
)</errorConditionFormula>
    <errorMessage>Não é possível alterar um Pedido vindo da Integração</errorMessage>
</ValidationRule>