force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>OriginOrderId__c</columns>
    <columns>NumeroPedidoERP__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>OrderTotals__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Brand__c</columns>
    <columns>CentrodeDistribuicao__c</columns>
    <columns>creationDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>contains</operation>
        <value>Malw</value>
    </filters>
    <label>Todos os pedidos</label>
</ListView>